# cboe

./: .gitattributes  .gitignore  .gitmodules  .itch.toml  .travis-install-deps.sh  .travis-install-tgui.sh  .travis.yml  CONTRIBUTING.md  DONORS.md  GLOBAL.H  Known Scenarios bugs.txt  README.md  README.txt  SConstruct  StyleGuide.md  TFILEIO.H  build.sh  macosx.make  main.cpp  makefile  todo.txt
.github/workflows/: ci.yml  mac-universal.yml  release.yml
Blades of Exile/: ACTIONS.CPP  ACTIONS.H  BLADES.CPP  BLADES.RC  Blades of Exile.cbp  Blades of Exile.dev  Blades_of_Exile_private.rc  COMBAT.CPP  COMBAT.H  CONSTS.H  DLGUTILS.CPP  DLOGTOOL.CPP  DLOGTOOL.H  EXLSOUND.CPP  EXLSOUND.H  FILEIO.CPP  FILEIO.H  GAMEDLOG.RC  GAMESTR.RC  GLOBAL.CPP  GLOBAL.H  GLOBVAR.CPP  GLOBVAR.H  GRAPHICS.CPP  GRAPHICS.H  GRAPHUTL.CPP  GUTILS.CPP  ITEMS.CPP  ITEMS.H  LOCATION.CPP  LOCATION.H  LOCUTILS.CPP  MONSTER.CPP  Makefile-DevCpp.win  Makefile-Nightly-i586  NEWGRAPH.CPP  PARTY.CPP  PARTY.H  PC.CPP  PC.H  (+30 more)
Blades of Exile Char Editor/: BLADPCED.CPP  BLADPCED.RC  Blades of Exile Char Editor.cbp  Blades_of_Exile_Character_Editor_private.h  Changes_SE.txt  DLOGTOOL.CPP  EDACTION.CPP  EDFILEIO.CPP  EDITORS.CPP  GLOBAL.CPP  GLOBAL.H  GRAPHICS.CPP  GRAPHUTL.CPP  bladpced.cpp  dlogtool.cpp  dlogtool.h  edfileio.cpp
Blades of Exile Char Editor/Resources/: u.cur
Blades of Exile/Resources/: talk.cur
Blades of Exile/classes/: LOCATION.CPP  PC.CPP  consts.h  location.cpp  pc.cpp
Blades of Exile/tools/: DLOGTOOL.CPP  DLOGTOOL.H  dlogtool.cpp  dlogtool.h  soundtool.cpp
Boesounds DLL/: boesounds.dev  dllmain.cpp
Installer/: install.nsi
Password Remover/: GLOBAL.CPP  TFILEIO.CPP
Scenario Editor/: 1.cur  BLSCENED.CPP  BLSCENED.RC  Blades of Exile Scenario Editor.dev  DLOGTOOL.CPP  EDSOUND.CPP  GAMEDLOG.RC  GLOBAL.CPP  GLOBAL.H  GRAPHUTL.CPP  KEYDLGS.CPP  Makefile-DevCpp.win  SCENARIO.CPP  STRINGS.RC  TFILEIO.CPP  TFILEIO.H  blscened.cpp  buttonmg.h  dlogtool.cpp  dlogtool.h  graphics.cpp  keydlgs.cpp  scenario.cpp  scenario.h  tactions.h  tfileio.cpp  townout.cpp
Scenarios Editor/: 7.cur  BLSCENED.CPP  BLSCENED.RC  BUTTONMG.CPP  Blades_of_Exile_Scenario_Editor_private.h  EDSOUND.CPP  EDSOUND.H  GAMEDLOG.RC  GLOBAL.H  GRAPHICS.CPP  SCENARIO.CPP  TACTIONS.CPP  TFILEIO.CPP  TFILEIO.H  townout.cpp
Temp/: WIN_BOE.SAV  WIN_BOES.SAV
Win32/: Known Scenarios bugs.txt  configure
Win32/Blades of Exile Char Editor/: BLADPCED.CPP  BLADPCED.RC  Blades of Exile Char Editor.cbp  Blades of Exile Character Editor.dev  Changes_CE.txt  DLOGTOOL.CPP  EDACTION.CPP  EDFILEIO.CPP  EDFILEIO.H  EDITORS.CPP  EDSOUND.CPP  GRAPHICS.CPP  Makefile-Nightly-amd64  Makefile-Nightly-i586  edfileio.cpp  edsound.cpp  global.h  graphutl.h
boesounds/: Makefile  boesounds.cbp
charedit/: Blades of Exile Character Editor.dev  Makefile  bladpced.cpp  dlogtool.cpp  dlogtool.h  edaction.cpp  editors.h  edsound.h  global.cpp  graphics.cpp  graphics.h  graphutl.h
doc/: Notes from Jeff Vogel.txt  SConscript  documentation.lyx  gpl-license.txt  index.html  upload.sh  upload_exclude.txt
game/: BLADES.RC  Makefile  boe.combat.cpp  boe.fields.cpp  boe.fileio.cpp  boe.graphics.cpp  boe.graphutil.h  boe.infodlg.cpp  boe.infodlg.h  boe.itemdata.cpp  boe.items.cpp  boe.items.h  boe.locutils.h  boe.main.cpp  boe.main.h  boe.monster.cpp  boe.newgraph.cpp  boe.newgraph.h  boe.party.cpp  boe.specials.cpp  boe.text.cpp  boe.text.h  global.h
osx/: .gitignore  Blades of Exile-Info.plist  BoE.icns  Exile.sound.c  Exile.sound.h  bladesofexile.rsrc  bldsexil.c  bldsexil.h  blx.g.utils.c  blx.g.utils.h  blxactions.c  blxfileio.c  blxfileio.h  blxgraphics.c  blxgraphics.h  blxtown_spec.c  blxtown_spec.h  boe.actions.cpp  boe.actions.h  boe.appleevents.mm  boe.combat.cpp  boe.combat.h  boe.consts.h  boe.dlgutil.cpp  boe.dlgutil.h  boe.fields.cpp  boe.fields.h  boe.fileio.cpp  boe.fileio.h  boe.global.h  boe.graphics.cpp  boe.graphics.h  boe.graphutil.cpp  boe.graphutil.h  boe.infodlg.cpp  boe.infodlg.h  boe.itemdata.cpp  boe.itemdata.h  boe.items.cpp  boe.items.h  (+91 more)
pkg/: generate-credits.py  generate-credits.sh  generate-startanim-col.sh  generate-startanim.sh  get-credits.sh  gitrev.sh  pack-scenario.sh  unpack-scenario.sh  validate-dialogs.sh
proj/cmake/: CMakeLists.txt  README.txt
pwdset/: BoE_NP.dev
rsrc/: SConscript  convert_sounds.py  convert_strings.py
scenedit/: 2.cur  Blades_of_Exile_Scenario_Editor_private.rc  Makefile  Makefile-Nightly-amd64  buttonmg.cpp  dlogtool.cpp  dlogtool.h  graphutl.cpp  graphutl.h  keydlgs.h  scenario.cpp  tactions.cpp  townout.cpp
src/: .gitignore  Blades of Exile-Info.plist  BoE-Info.plist  SConscript  alchemy.cpp  alchemy.hpp  boe.actions.cpp  boe.actions.h  boe.actions.hpp  boe.appleevents.mm  boe.combat.cpp  boe.combat.h  boe.combat.hpp  boe.consts.h  boe.consts.hpp  boe.dlgutil.cpp  boe.dlgutil.h  boe.dlgutil.hpp  boe.fileio.cpp  boe.fileio.h  boe.fileio.hpp  boe.global.h  boe.global.hpp  boe.graphics.cpp  boe.graphics.h  boe.graphics.hpp  boe.graphutil.cpp  boe.graphutil.h  boe.graphutil.hpp  boe.infodlg.cpp  boe.infodlg.h  boe.infodlg.hpp  boe.itemdata.cpp  boe.itemdata.h  boe.itemdata.hpp  boe.items.cpp  boe.items.h  boe.items.hpp  boe.locutils.cpp  boe.locutils.h  (+59 more)
src/fileio/xml-parser/: .gitignore  CMakeLists.txt  LICENSE  README.md  build_instructions.txt  premake4.lua  ticpp.cpp  ticpp.h  ticpp.lua  ticpp4.lua  tinyprint.cpp  tinyprint.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
src/fileio/xml-parser/tests/mocks/: TicppMock.hh
test/: SConscript  catch.cpp  catch.hpp  dialogs.cpp  enums.cpp  init.cpp  item_legacy.cpp  item_read.cpp  item_write.cpp  map_read.cpp  map_write.cpp  monst_legacy.cpp  monst_read.cpp  monst_write.cpp  out_legacy.cpp  out_read.cpp  out_write.cpp  pc_read.cpp  replay_parse.cpp  replays.sh  scen_legacy.cpp  scen_read.cpp  scen_write.cpp  spec_legacy.cpp  string_quote.cpp  tagfile.cpp  tagfiles.cpp  talk_legacy.cpp  talk_read.cpp  talk_write.cpp  ter_legacy.cpp  ter_read.cpp  ter_write.cpp  town_legacy.cpp  town_read.cpp  town_write.cpp  vector2d.cpp
(+2284 files in other folders)
